text wrap fix

--- a/web/elections/eaag/css/main.less
+++ b/web/elections/eaag/css/main.less
@@ -604,6 +604,7 @@ main {
 							.detail-12-strong();
 							.text-elevation();
 							color: @fly-dynamic-text-primary;
+							text-wrap: nowrap;
 						}
 					}
 					.flag-d-win {
